--- a/src/app/modules/egg-packing/egg-packing.component.html
+++ b/src/app/modules/egg-packing/egg-packing.component.html
@@ -25,14 +25,16 @@
                 <div class="services-details-desc">
                     <span class="sub-title">Egg Packing</span>
                     <p style="margin-top: 30px;">
-                      The veterinary module is designed to ensuring the health and well-being of the birds. It helps in the prevention and control of diseases, which can significantly impact productivity and profitability.
+                      I Grow Chicken Software's egg packing module is an essential tool that helps farmers manage their eggs effectively. With this module, farmers can keep track of their eggs,
+                      monitor their production, and optimize their egg packing process.
                     </p>
                     <p>
-                      This module includes features such as medication schedule, alert and notification, and medication cost included to bird cost. Overall, this module will help farmers to
-                      keep track of medication, reduce the risk of disease outbreak and improve the bird's health.
+                      The egg packing module in I Grow Chicken Software provides farmers with real-time data on their eggs,
+                      enabling them to make informed decisions about their egg production and packaging. This module helps farmers
+                      optimize their egg packing process, ensuring that eggs are packed efficiently and in a timely manner.
                     </p>
 
-                    <h3>Features</h3>
+                    <h3>Core Features</h3>
 
                     <div class="row align-items-center">
                       <div class="col-lg-6 col-md-6">
@@ -43,10 +45,9 @@
 
                       <div class="col-lg-6 col-md-6">
                           <div class="content">
-                              <h3>Medication Scheduling</h3>
+                              <h3>Analyze Egg Grades & Quality</h3>
                               <p>
-                                Maintain your birds' health effortlessly by utilizing the medication scheduling feature in I Grow Chicken Software. This tool ensures timely and consistent administration of medications,
-                                which is vital for disease prevention and overall well-being. With a proper schedule in place, your birds will receive the treatments they need to thrive.
+                                Evaluate the ungraded stock and the results of egg grading, including the second-grade eggs. This analysis will enable you to make informed decisions, enhance your bird's health, identify potential issues, and take necessary actions.
                               </p>
                           </div>
                       </div>
@@ -55,10 +56,9 @@
                     <div class="row align-items-center">
                       <div class="col-lg-6 col-md-6">
                           <div class="content">
-                              <h3>Detailed Health Reports</h3>
+                              <h3>Improved Productivity</h3>
                               <p>
-                                Get informed and detailed flock health from the I Grow Chicken Software. Gain valuable insights on how vaccination is administered, who administered the medication, whether the proper medication
-                                schedules are being adhered to and much more. This information will help you make informed decisions and improve your bird's health, identify potential issues and take necessary actions.
+                                I Grow Chicken optimizes operations and enhances efficiencies, enabling layer farms to achieve their full production potential and boost productivity.
                               </p>
                           </div>
                       </div>
@@ -69,27 +69,6 @@
                         </div>
                       </div>
                   </div>
-
-                  <div class="row align-items-center">
-                    <div class="col-lg-6 col-md-6">
-                        <div class="image">
-                            <img src="assets/img/waste reduction.jpg" alt="waste-reduction">
-                        </div>
-                    </div>
-
-                    <div class="col-lg-6 col-md-6">
-                        <div class="content">
-                            <h3>Minimize Waste</h3>
-                            <p>
-                              Monitoring Indent Order-Based Production allows you to create the precise quantity of needed, minimizing waste and saving costs.
-                              This-encompassing strategy boosts overall efficiency and profitability on your farm. Our feed mill management module allows you to minimize waste by
-                              monitoring essential parameters throughout the production process.
-                            </p>
-                        </div>
-                    </div>
-                  </div>
-
-
                 </div>
             </div>
 
