--- a/src/app/pages/privacy-policy/privacy-policy.component.html
+++ b/src/app/pages/privacy-policy/privacy-policy.component.html
@@ -1,12 +1,22 @@
 
+<section class="page-title-area">
+  <div class="container">
+      <div class="page-title-content">
+          <h2>Privacy Policy</h2>
+          <ul>
+              <li><a routerLink="/">Home</a></li>
+              <li>Privacy Policy</li>
+          </ul>
+      </div>
+  </div>
+</section>
 
 <section class="privacy-policy-area ptb-100">
   <div class="container">
       <div class="row">
           <div class="col-lg-8 col-md-12">
               <div class="privacy-policy-content">
-                  <img src="assets/img/blog/img4.jpg" alt="image">
-                  <p><i>This Privacy Policy was last updated on February 14, 2025.</i></p>
+                  <p><i>This Privacy Policy was last updated on April 17, 2025.</i></p>
                   <h3>1. What Data We Get</h3>
                   <blockquote class="blockquote">
                       <p>We collect certain data from you directly, like information you enter yourself, data about your participation in courses, and data from third-party platforms you connect with WideCademy. We also collect some data automatically, like information about your device and what parts of our Services you interact with or spend time using.</p>
@@ -41,7 +51,7 @@
 
                       <article class="item">
                           <div class="info">
-                              <h4 class="title usmall"><a javascript:void(0);="#">No Data</a></h4>
+                              <h4 class="title usmall"><a href="javascript:void(0);">No Data</a></h4>
                           </div>
                           <div class="clear"></div>
                       </article>
