--- a/src/app/partials/footer-component/footer-component.component.html
+++ b/src/app/partials/footer-component/footer-component.component.html
@@ -11,8 +11,8 @@
                     </a>
                     <p>Follow us on our socials.</p>
                     <ul class="social-link">
-                        <li><a href="#" class="d-block" target="_blank"><i class='bx bxl-facebook'></i></a></li>
-                        <li><a href="#" class="d-block" target="_blank"><i class='bx bxl-linkedin'></i></a></li>
+                        <li><a href="https://www.facebook.com/people/I-Grow-Chicken/61573852148349/#" target="_blank" class="d-block" target="_blank"><i class='bx bxl-facebook'></i></a></li>
+                        <li><a href="https://www.linkedin.com/company/igrowchicken" target="_blank" class="d-block" target="_blank"><i class='bx bxl-linkedin'></i></a></li>
                     </ul>
                 </div>
             </div>
@@ -49,7 +49,7 @@
                     <ul class="footer-contact-info">
                         <li><i class='bx bx-map'></i>Wagenweg 222,2012 NM Haarlem, Netherlands</li>
                         <li><i class='bx bx-phone-call'></i><a href="tel:+31 654 31 3771">+31 654 31 3771</a></li>
-                        <li><i class='bx bx-envelope'></i><a href="mailto:info@igrowchicken">info&#64;igrowchicken.com</a></li>
+                        <li><i class='bx bx-envelope'></i><a href="mailto:info@igrowchicken.com">info&#64;igrowchicken.com</a></li>
                     </ul>
                 </div>
             </div>
@@ -63,7 +63,7 @@
 
                 <div class="col-lg-6 col-md-6">
                     <ul>
-                        <li><a routerLink="/privacy-policy">Privacy Policy</a></li>
+                        <li><a routerLink="privacy-policy">Privacy Policy</a></li>
                         <li><small><a target="_blank" href="https://envytheme.com/"> Theme by EnvyTheme</a></small></li>
                     </ul>
                 </div>
