--- a/src/app/pages/contact-component/contact-component.component.html
+++ b/src/app/pages/contact-component/contact-component.component.html
@@ -76,43 +76,53 @@
 
             <div class="col-lg-6 col-md-12">
                 <div class="contact-form">
-                    <form id="contactForm">
+                    <form name="contact-form" ng-hide="contact-form.$submitted" [formGroup]="form" method="POST" (ngSubmit)="onSubmit()">
                         <div class="row">
                             <div class="col-lg-12 col-md-6">
-                                <div class="form-group">
-                                    <input type="text" name="name" class="form-control" id="name" required="" data-error="Please enter your name" placeholder="Your name">
-                                    <div class="help-block with-errors"></div>
-                                </div>
+                              <mat-form-field class="form-field col-md-6" appearance="fill">
+                                <mat-label class="label">Name</mat-label>
+                                <input matInput [formControl]="name" placeholder="Please enter your name"/>
+                                <mat-error *ngIf="name.invalid" class="text-danger">Please enter your name</mat-error>
+                              </mat-form-field>
                             </div>
 
                             <div class="col-lg-12 col-md-6">
-                                <div class="form-group">
-                                    <input type="email" name="email" class="form-control" id="email" required="" data-error="Please enter your email" placeholder="Your email address">
-                                    <div class="help-block with-errors"></div>
-                                </div>
+                              <mat-form-field class="form-field col-md-6 ml-2" appearance="fill">
+                                <mat-label class="label">Email</mat-label>
+                                <input matInput [formControl]="email" placeholder="Please enter a valid email address" />
+                                <mat-error *ngIf="email.invalid" class="text-danger">Please enter a valid email</mat-error>
+                            </mat-form-field>
                             </div>
 
                             <div class="col-lg-12 col-md-12">
-                                <div class="form-group">
-                                    <input type="text" name="phone_number" class="form-control" id="phone_number" required="" data-error="Please enter your phone number" placeholder="Your phone number">
-                                    <div class="help-block with-errors"></div>
-                                </div>
+                              <mat-form-field class="form-field" appearance="fill">
+                                <mat-label class="label">Subject</mat-label>
+                                <input matInput [formControl]="subject" placeholder="Your subject matter"/>
+                                <mat-error *ngIf="subject.invalid" class="text-danger">Please enter a subject</mat-error>
+                            </mat-form-field>
                             </div>
 
                             <div class="col-lg-12 col-md-12">
-                                <div class="form-group">
-                                    <textarea name="message" id="message" class="form-control" cols="30" rows="6" required="" data-error="Please enter your message" placeholder="Write your message..."></textarea>
-                                    <div class="help-block with-errors"></div>
-                                </div>
+                              <mat-form-field class="form-field-full" appearance="fill">
+                                <mat-label class="label">Message</mat-label>
+                                <textarea matInput [formControl]="message" maxlength="256" rows="5" placeholder="What do you need?"></textarea>
+                                <mat-hint align="end" class="label"> {{message.value?.length || 0}}/256</mat-hint>
+                                <mat-error *ngIf="message.invalid" class="text-danger">Please enter a message</mat-error>
+                            </mat-form-field>
                             </div>
 
                             <div class="col-lg-12 col-md-12">
-                                <button type="submit" class="default-btn"><i class="flaticon-tick"></i>Send Message<span></span></button>
-                                <div id="msgSubmit" class="h3 text-center hidden"></div>
+                                <button type="submit" [disabled]="submitting" class="default-btn" name="send"><i class="flaticon-tick"></i>Send Message<span></span></button>
+                                 <input [formControl]="honeypot" class="hidden" type="text" />
                                 <div class="clearfix"></div>
                             </div>
                         </div>
                     </form>
+
+                    <div [ngClass]="!submitted ? 'hidden' : 'visible'" class="center-text text-success mt-2">
+                      <img src="assets/img/success-check.png" alt="success-image" class="success-image"> <strong><span style="font-size: 1.3em; margin-top: 10px;">{{responseMessage}}</span></strong>
+                    </div>
+
                 </div>
             </div>
         </div>
