--- a/src/app/pages/contact-component/contact-component.component.html
+++ b/src/app/pages/contact-component/contact-component.component.html
@@ -76,7 +76,7 @@
 
             <div class="col-lg-6 col-md-12">
                 <div class="contact-form">
-                    <form name="contact-form" ng-hide="contact-form.$submitted" [formGroup]="form" method="POST" (ngSubmit)="onSubmit()">
+                    <form [formGroup]="myForm" method="POST" (ngSubmit)="onSubmit()" name="contact-form" ng-hide="contact-form.$submitted">
                         <div class="row">
                             <div class="col-lg-12 col-md-6">
                               <mat-form-field class="form-field col-md-6" appearance="fill">
@@ -120,7 +120,7 @@
                     </form>
 
                     <div [ngClass]="!submitted ? 'hidden' : 'visible'" class="center-text text-success mt-2">
-                      <img src="assets/img/success-check.png" alt="success-image" class="success-image"> <strong><span style="font-size: 1.3em; margin-top: 10px;">{{responseMessage}}</span></strong>
+                      <img src="assets/img/success-check.png" alt="success-image" class="success-image"> <strong><span style="font-size: 1.3em; margin-top: 10px;">{{ responseMessage }}</span></strong>
                     </div>
 
                 </div>
