--- a/src/app/partials/footer-component/footer-component.component.html
+++ b/src/app/partials/footer-component/footer-component.component.html
@@ -58,7 +58,7 @@
         <div class="footer-bottom-area">
             <div class="row align-items-center">
                 <div class="col-lg-6 col-md-6">
-                     <p><strong> &copy; <script>document.write(new Date().getFullYear());</script> 2025 I Grow Chicken</strong></p>
+                     <p><strong> &copy; 2025 &nbsp; •  &nbsp; All Rights Reserved &nbsp; • &nbsp; I Grow Chicken</strong></p>
                 </div>
 
                 <div class="col-lg-6 col-md-6">
