--- a/src/app/pages/about-component/about-component.component.html
+++ b/src/app/pages/about-component/about-component.component.html
@@ -13,8 +13,8 @@
                         <span class="sub-title"><img src="assets/img/star-icon.png" alt="image"> About Us</span>
                         <h3>Unleash Potential Through Technology</h3>
                         <p>
-                          By making an integrated set of tools available on a smartphone and browser alike we are putting
-                          reports and know-how into the hands of Integrations or Individual Farmers.
+                          By making an integrated set of tools available on a smartphone and browser alike, we are putting
+                          reports and know-how into the hands of institutions or individual farmers.
                         </p>
                         <ul class="features-list">
                             <li><span>
