--- a/src/app/partials/footer-component/footer-component.component.html
+++ b/src/app/partials/footer-component/footer-component.component.html
@@ -13,6 +13,7 @@
                     <ul class="social-link">
                         <li><a href="https://www.facebook.com/people/I-Grow-Chicken/61573852148349/#" target="_blank" class="d-block" target="_blank"><i class='bx bxl-facebook'></i></a></li>
                         <li><a href="https://www.linkedin.com/company/igrowchicken" target="_blank" class="d-block" target="_blank"><i class='bx bxl-linkedin'></i></a></li>
+                        <li><a href="https://i-grow-chicken.medium.com/" target="_blank" class="d-block" target="_blank"><i class='bx bxl-medium'></i></a></li>
                     </ul>
                 </div>
             </div>
