--- a/src/app/pages/contact-component/contact-component.component.html
+++ b/src/app/pages/contact-component/contact-component.component.html
@@ -76,7 +76,7 @@
 
             <div class="col-lg-6 col-md-12">
                 <div class="contact-form">
-                    <form [formGroup]="myForm" method="POST" (ngSubmit)="onSubmit()" name="contact-form" ng-hide="contact-form.$submitted">
+                    <form  name="contact-form">
                         <div class="row">
                             <div class="col-lg-12 col-md-6">
                               <mat-form-field class="form-field col-md-6" appearance="fill">
