--- a/src/app/modules/egg-packing/egg-packing.component.html
+++ b/src/app/modules/egg-packing/egg-packing.component.html
@@ -110,7 +110,7 @@
                      Get in touch with us today or schedule a demo with one of our experts.
                     </p>
 
-                    <a class="default-btn wow animate__animated animate__fadeInUp" data-wow-delay="200ms" data-wow-duration="1500ms" href=""
+                    <a class="default-btn wow animate__animated animate__fadeInUp" data-wow-delay="200ms" data-wow-duration="1500ms" href="#"
                      onclick="Calendly.initPopupWidget({url: 'https://calendly.com/mike-waweru-ebit-plus/igc-demo-request'});return false;"><i class="flaticon-web"></i>Book a Demo
                     </a>
                 </div>
@@ -160,9 +160,9 @@
                     <div class="icon">
                         <img src="assets/img/services/icon1.png" alt="image">
                     </div>
-                    <h3><a routerLink="/module/layer-management">Layer Management</a></h3>
+                    <h3><a routerLink="/modules/detail/layer-management">Layer Management</a></h3>
                     <p>Oversee flock performance and plan egg production. Easily handle daily transactions and ensure the completion of the entire cycle.</p>
-                    <a routerLink="/module/layer-management" class="read-more-btn">Go to Module <i class="flaticon-right"></i></a>
+                    <a routerLink="/modules/detail/layer-management" class="read-more-btn">Go to Module <i class="flaticon-right"></i></a>
                 </div>
             </div>
         </div>
